@@ -1,5 +1,6 @@
 == 2.7.2 ==
-Release date: 
+Release date: January 17, 2023
+* Fixed: Compatibility issues with Elementor 3.10.0
 * Enhancement: Team Member Carousel - Added Links Target option
 
 == 2.7.1 ==
